# nostr-rust-flutter-plugin

./: .gitignore  README.md  pubspec.yaml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: nostr.dart  relay.dart
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  debug_secret_key.rs  test_nostr.rs  test_secret_key.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  nostr.rs  relay.rs
rust_builder/cargokit/build_tool/lib/src/: environment.dart
rust_builder/cargokit/cmake/: cargokit.cmake
rust_builder/windows/: CMakeLists.txt
