[package]
name = "rust_lib_nostr_rust"
version = "0.1.0"
edition = "2021"

# Declare this as a workspace root to prevent parent workspace detection issues on Windows
# This allows the package to be built independently while still being a workspace member on other platforms
[workspace]

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.7.0"
nostr = { version = "0.43", features = ["nip04", "nip44"] }
nostr-sdk = "0.43"
nostr-relay-builder = "0.43"
nostr-database = { version = "0.43", features = ["flatbuf"] }
nostr-lmdb = "0.43"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"